drag&drop job ordering, saving modified schedules

--- a/src/app/gantt-chart/edit-schedule/edit-schedule.component.html
+++ b/src/app/gantt-chart/edit-schedule/edit-schedule.component.html
@@ -1,48 +1,56 @@
-  <div class="d-flex flex-row">
-    <div class="p-2">{{entity.description}}</div>
-    <div class="p-2">Makespan: {{result.makespan}}</div>
-    <div class="p-2">Setup time: {{result.setupTime}}</div>
-    <div class="p-2"># of setups: {{result.numberOfSetups}}</div>
-  </div>
+<div class="d-flex flex-row">
+  <div class="p-2">{{entity.description}}</div>
+  <div class="p-2">Makespan: {{result.makespan}}</div>
+  <div class="p-2">Setup time: {{result.setupTime}}</div>
+  <div class="p-2"># of setups: {{result.numberOfSetups}}</div>
+</div>
 
-  <p-table id="jobEditorTable" #dt [columns]="jobCols" [value]="jobs" dataKey="name" selectionMode="single"
-    [(selection)]="selectedJob" [paginator]="true" [rows]="5">
-    <ng-template pTemplate="header" let-columns>
-      <tr>
-        <th style="width: 3em"></th>
-        <th *ngFor="let col of columns">
-          {{col.header}}
-        </th>
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-rowData let-expanded="expanded" let-columns="columns">
-      <tr [pSelectableRow]="rowData" (click)="rowSelect.emit({name: rowData.name, jobs: jobs}); selectJob(rowData)">
-        <td>
-          <a href="#" [pRowToggler]="rowData" (click)="selectJob(rowData)">
-            <i [ngClass]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"></i>
-          </a>
-        </td>
-        <td *ngFor="let col of columns">
-          {{rowData[col.field]}}
-        </td>
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="rowexpansion" let-rowData let-columns="columns">
-      <tr>
-        <td [attr.colspan]="columns.length + 1">
-          <div class="ui-g ui-fluid">
-            <div class="list-group align-self-center m-1" *ngFor="let ops of rowData.route.operations; let i = index">
-              <li class="list-group-item list-group-item-action" *ngFor="let op of ops"
-                [ngClass]="{'active': rowData.selectedOperation[i] == op}" (click)="selectOperation(rowData, op, i)">
-                {{op[0] + ' (' + op[1] + ')'}}
-              </li>
-            </div>
+<p-table id="jobEditorTable" #dt [columns]="jobCols" [value]="jobs" dataKey="name" selectionMode="single"
+  [(selection)]="selectedJob" [paginator]="true" [rows]="5">
+  <ng-template pTemplate="header" let-columns>
+    <tr>
+      <th style="width: 3em"></th>
+      <th *ngFor="let col of columns">
+        {{col.header}}
+      </th>
+      <th style="width:3em"></th>
+    </tr>
+  </ng-template>
+  <ng-template pTemplate="body" let-rowData let-expanded="expanded" let-columns="columns" let-index="rowIndex">
+    <tr [pSelectableRow]="rowData" (click)="rowSelect.emit({name: rowData.name, jobs: jobs}); selectJob(rowData)"
+      [pReorderableRow]="index">
+      <td>
+        <a href="#" [pRowToggler]="rowData" (click)="selectJob(rowData)">
+          <i [ngClass]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"></i>
+        </a>
+      </td>
+      <td *ngFor="let col of columns">
+        {{rowData[col.field]}}
+      </td>
+      <td>
+        <i class="pi pi-window-maximize" pReorderableRowHandle></i>
+      </td>
+    </tr>
+  </ng-template>
+  <ng-template pTemplate="rowexpansion" let-rowData let-columns="columns">
+    <tr>
+      <td [attr.colspan]="columns.length + 1">
+        <div class="ui-g ui-fluid">
+          <div class="list-group align-self-center m-1" *ngFor="let ops of rowData.route.operations; let i = index">
+            <li class="list-group-item list-group-item-action" *ngFor="let op of ops"
+              [ngClass]="{'active': rowData.selectedOperation[i] == op}" (click)="selectOperation(rowData, op, i)">
+              {{op[0] + ' (' + op[1] + ')'}}
+            </li>
           </div>
-          <div class="align-items-center">
-            <small>Start time: </small>
-            <input type="number" class="m-1" style="width:50px" [(ngModel)]="rowData.startTime">
-          </div>
-        </td>
-      </tr>
-    </ng-template>
-  </p-table>
+        </div>
+        <div class="align-items-center">
+          <small>Start time: </small>
+          <input type="number" class="m-1" style="width:50px" [(ngModel)]="rowData.startTime">
+        </div>
+      </td>
+    </tr>
+  </ng-template>
+</p-table>
+<div class="d-flex align-items-center justify-content-end">
+  <button type="button" class="btn btn-sm btn-outline-success m-2" (click)="saveSchedule()">Save Schedule</button>
+</div>
