--- a/projects/crud-table-lib/src/lib/crud-table-lib.component.html
+++ b/projects/crud-table-lib/src/lib/crud-table-lib.component.html
@@ -65,10 +65,14 @@
         </ng-container>
         <td align="right">
           <div class="d-flex justify-content-end">
-            <button type="button" class="btn btn-outline-primary mr-1 btn-sm" (click)="editRow(dataRow)"><span
-                class="pi pi-pencil"></span></button>
-            <button type="button" class="btn btn-outline-danger mr-1 btn-sm" (click)="confirmThenDelete(dataRow)"><span
-                class="pi pi-trash"></span></button>
+            <button type="button" class="btn btn-outline-primary mr-1 btn-sm" (click)="editRow(dataRow)" 
+              [disabled]="!canUpdateEntity()">
+              <span class="pi pi-pencil"></span>
+            </button>
+            <button type="button" class="btn btn-outline-danger mr-1 btn-sm" (click)="confirmThenDelete(dataRow)"
+              [disabled]="!canDeleteEntity()">
+              <span class="pi pi-trash"></span>
+            </button>
           </div>
         </td>
       </tr>
