--- a/src/app/gantt-chart/edit-schedule/edit-schedule.component.html
+++ b/src/app/gantt-chart/edit-schedule/edit-schedule.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-row">
-  <div class="p-2">{{entity.description}}</div>
+  <div class="p-2" style="font-weight: bold;">{{schedule.description}}</div>
   <div class="p-2">Makespan: {{result.makespan}}</div>
   <div class="p-2">Setup time: {{result.setupTime}}</div>
   <div class="p-2"># of setups: {{result.numberOfSetups}}</div>
