mini design change

--- a/src/app/administration/administration.component.html
+++ b/src/app/administration/administration.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <nav class="navbar navbar-expand-lg navbar-light m-1" style="border:1px solid #cccccc; border-radius: 5px;">
+  <nav class="navbar navbar-expand-lg navbar-light m-1" style="border:1px solid #3097D1; border-radius: 5px;">
     <a class="navbar-brand" href="#">Planner</a>
     <button class="navbar-toggler" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed" data-toggle="collapse"
       data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
