--- a/src/app/gantt-chart/edit-schedule/edit-schedule.component.html
+++ b/src/app/gantt-chart/edit-schedule/edit-schedule.component.html
@@ -44,8 +44,8 @@
           </div>
         </div>
         <div class="align-items-center">
-          <small>Start time: </small>
-          <input type="number" class="m-1" style="width:50px" [(ngModel)]="rowData.startTime">
+          <small>Time schedule: </small>
+          <input type="number" class="m-1" style="width:50px" [(ngModel)]="rowData.timeSchedule">
         </div>
       </td>
     </tr>
