--- a/src/app/gantt-chart/modal-diagram/modal-diagram.component.html
+++ b/src/app/gantt-chart/modal-diagram/modal-diagram.component.html
@@ -23,6 +23,6 @@
       <p-checkbox class="p-2" (onChange)="showSetups($event)" binary="true" [(ngModel)]="isShowSetups"></p-checkbox>
       <span>Show # of setups</span>
     </div>
-    <button type="button" class="btn btn-outline-dark" (click)="close()" ngbAutofocus>Close</button>
+    <button type="button" class="btn btn-sm btn-outline-success m-2" (click)="close()" ngbAutofocus>Close</button>
   </div>
 </div>
