--- a/src/app/gantt-chart/schedule-selector/schedule-selector.component.html
+++ b/src/app/gantt-chart/schedule-selector/schedule-selector.component.html
@@ -1,6 +1,6 @@
 <lib-crud-table-lib 
   [entity]="entity" [entityName]="'schedules'" [filter]="''" 
-  [actualPermissions]="permissions" [itemsPerPage]="5" 
+  [permissions]="permissions" [itemsPerPage]="5" 
   (rowSelect)="rowSelect($event)">
 </lib-crud-table-lib>
   
